--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  margin-bottom: 5rem;
 
   @media screen and (max-width: 700px) {
     height: 100%;
