--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -40,10 +40,7 @@ $link-font: "NB International Mono", sans-serif;
   src: url("assets/fonts/NeueHaasDisplayMedium.ttf");
 }
 
-@font-face {
-  font-family: "NB International Mono";
-  src: url("assets/fonts/NB-Internatioinal-Mono.ttf");
-}
+
 
 
 // Animations
